# server

./: CMakeLists.txt
inc/: simIO.h  simLog.h
src/: server.cpp  simIO.cpp  simLog.cpp
